--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,9 @@
   <script defer src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   <script defer src="{{ "/js/jquery.formikation.min.js" | prepend: site.baseurl }}"></script>
   <script defer src="{{ "/js/ready.js" | prepend: site.baseurl }}"></script>
+
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+  <!--[if lt IE 9]>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
+  <![endif]-->
 </head>
