--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-  <script defer src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script defer src="{{ "/js/jquery.formikation.min.js" | prepend: site.baseurl }}"></script>
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="{{ "/js/jquery.formikation.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/js/burgermenu.min.js" | prepend: site.baseurl }}"></script>
   <script defer src="{{ "/js/ready.js" | prepend: site.baseurl }}"></script>
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
