--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@ body {
          box-sizing: border-box;
 }
 
-.page-content {
+.page-wrapper {
   padding-top: 65px;
 }
 
@@ -31,7 +31,7 @@ body {
   .wrapper {
     padding: 0 15px;
   }
-  .page-content {
+  .page-wrapper {
     padding-top: 65px;
   }
 }
