--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,11 +1,6 @@
 .site-header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
   background: rgba(#fff, 0.9);
   border-bottom: 1px solid $col_border;
-  z-index: 1;
   box-shadow: 0 0 1px rgba(0,0,0,.25);
   .wrapper {
     padding-top: 0;
@@ -22,18 +17,27 @@
     font-size: 22px;
     font-weight: 300;
   }
+  #burgermenu-toggle,
   .site-nav {
     float: right;
-    padding: 15px 35px 15px 0;
+    padding: 16px 0;
     font-size: 16px;
     a {
       display: inline-block;
-      padding: 7px 5px 7px;
+      padding: 7px 0 7px 10px;
       border-bottom: 2px solid transparent;
       color: rgba($col_link, 0.6);
       &.active {
         color: $col_link;
       }
+    }
+  }
+  #burgermenu-toggle {
+    display: none;
+    text-decoration: none;
+    border: 0;
+    img {
+      vertical-align: middle;
     }
   }
 }
@@ -44,6 +48,12 @@
       width: 75px;
       height: 65px;
       font: 0/0 a;
+    }
+    .site-nav {
+      display: none;
+    }
+    #burgermenu-toggle {
+      display: block;
     }
   }
 }
