--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,6 @@
       <a href="{{ "/examples.html" | prepend: site.baseurl }}"{% if page.slug == "examples" %} class="active"{% endif %}>Examples</a>
       <a href="https://github.com/vortizhe/formikation" class="github">View on Github</a>
     </nav>
-    <a id="burgermenu-toggle" href="#mobile-menu" title="menu"><img src="{{ "/images/menu.svg" | prepend: site.baseurl }}{{ site.baseurl }}"></img></a>
+    <a id="burgermenu-toggle" href="#mobile-menu" title="menu"><img src="{{ "/images/menu.svg" | prepend: site.baseurl }}"></img></a>
   </div>
 </header>
