Burger menu to fixed position to avoid iOS Bug

--- a/_sass/_burgermenu.scss
+++ b/_sass/_burgermenu.scss
@@ -15,7 +15,7 @@ body {
 
 .burgermenu-left, .burgermenu-right {
   width: 273px;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   height: 100%;
