--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,5 +1,5 @@
 .site-header {
-  background: rgba(#fff, 0.9);
+  background: #FFF;
   border-bottom: 1px solid $col_border;
   box-shadow: 0 0 1px rgba(0,0,0,.25);
   .wrapper {
