--- a/_sass/_formikation.scss
+++ b/_sass/_formikation.scss
@@ -1,176 +1,272 @@
-// vars
+// Structural styles
 
-$border_radius: 3px !default;
-$color: #337AB7 !default;
-$border_color: #d8d8d8 !default;
+.formikation label {
+  display: block;
+  line-height: 1.25;
+}
 
+.formikation input[type=checkbox],
+.formikation input[type=radio] {
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  position: absolute;
+  left: -9999px;
+}
 
+.formikation .fk-radio,
+.formikation .fk-check {
+  display: block;
+  position: relative;
+  display: inline-block;
+}
 
-.formikation {
+.formikation .fk-radio:before,
+.formikation .fk-check:before {
+  content: ' ';
+  display: inline-block;
+  vertical-align: middle;
+}
 
-  //
-  // Checks and radios
-  //
-  input[type=checkbox],
-  input[type=radio] {
-    padding-top: 1px;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-    position: absolute;
-    left: -9999px;
-  }
+.formikation .fk-radio:after,
+.formikation .fk-check:after {
+  content: '';
+  display: block;
+  position: absolute;
+}
 
+.formikation .fk-radio.checked:after, .formikation .fk-radio.checked:after,
+.formikation .fk-check.checked:after,
+.formikation .fk-check.checked:after {
+  content: ' ';
+}
 
-  //
-  // Labels
-  //
-  label {
-    display: block;
-    padding-right: 16px;
-    margin-bottom: 0.5em;
-    cursor: pointer;
-    &.fk-radio,
-    &.fk-check {
-      position: relative;
-      display: inline-block;
-      margin-bottom: 0;
-      &:before {
-        content: ' ';
-        display: inline-block;
-        vertical-align: middle;
-        width: 20px;
-        height: 20px;
-        border: 1px solid $border_color;
-        margin-top: -2px;
-        border-radius: $border_radius;
-      }
-      &:after {
-        content: ' ';
-        display: block;
-        width: 12px;
-        height: 12px;
-        position: absolute;
-        left: 5px;
-        top: 4px;
-        background: #fff;
-        background: transparent;
-        border-radius: $border_radius;
-      }
-    }
-    &.fk-radio:before,
-    &.fk-radio:after {
-      border-radius: 50%;
-    }
-    &.checked {
-      &.fk-radio:after,
-      &.fk-check:after {
-        // IE8 does not render the changes in a :pseudo-element with we don't change the 'content', thus we change it from ' ' -> ''.
-        content: '';
-        background: $color;
-      }
-    }
-    &.disabled {
-      &.fk-radio,
-      &.fk-check {
-        opacity: 0.6;
-      }
-    }
-  }
+.formikation .fk-radio.disabled,
+.formikation .fk-check.disabled {
+  opacity: 0.6;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+}
 
+.formikation .fk-radio:before, .formikation .fk-radio:after {
+  border-radius: 50%;
+}
 
+.formikation .fk-select {
+  display: block;
+  width: 100%;
+}
 
-  //
-  // Select
-  //
-  select {
-    width: 100%;
-  }
-  .fk-select {
-    display: block;
-    width: 100%;
-    min-width: 250px;
-    padding: 10px 10px 5px;
-    border: 1px solid $border_color;
-    background: #fff;
-    border-radius: $border_radius;
-    &:after {
-      display: block;
-      float: right;
-      padding: 8px 12px;
-      margin: -8px -15px;
-      border-left: 1px solid $border_color;
-    }
-    .fk-select-label {
-      display: inline-block;
-      margin: 0;
-      padding: 0;
-      color: #666;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    &.fk-select-focus {
-      border-color: #000;
-      &:after { border-color: #000; }
-      .fl-select-label { color: #000; }
-    }
-    &.disabled {
-      opacity: 0.6;
-    }
-  }
+.formikation .fk-select .fk-select-label {
+  display: inline;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
+.formikation .fk-file-input {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  outline: 0;
+}
 
+.formikation .fk-file-input:after {
+  content: attr(data-text);
+  display: block;
+  position: absolute;
+  right: 0;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
 
-  //
-  // File input
-  //
-  .fk-file-input {
-    display: block;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    padding: 10px 4px 6px;
-    background: #fff;
-    border: 1px solid #ccc;
-    outline: 0;
-    border-radius: $border_radius;
-    line-height: 1.2;
-    &:after {
-      content: 'Select file';
-      display: block;
-      position: absolute;
-      right: 4px;
-      top: 4px;
-      padding: 7px 10px 6px;
-      border: 0;
-      outline: 0;
-      cursor: pointer;
-      text-decoration: none;
-      text-align: center;
-      color: #fff;
-      background-color: $color;
-      border-radius: $border_radius;
-      line-height: 1;
-    }
-    > p {
-      margin: 0;
-      padding: 0px 0 0 8px !important;
-    }
-    input[type=file] {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-      top: 0;
-      opacity: 0;
-      // IE8
-      -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-      z-index: 3;
-      cursor: pointer;
-    }
-    &.disabled {
-      opacity: 0.6;
-    }
-  }
+.formikation .fk-file-input > p {
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+}
+
+.formikation .fk-file-input input[type=file] {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 3;
+  cursor: pointer;
+}
+
+// Default theme
+
+.fk-default-theme label {
+  padding-right: 16px;
+  margin-bottom: 0.5em;
+}
+
+.fk-default-theme label.fk-radio:before, .fk-default-theme label.fk-check:before {
+  content: ' ';
+  width: 20px;
+  height: 20px;
+  border: 1px solid #d8d8d8;
+  margin-top: -3px;
+  border-radius: 3px;
+}
+
+.fk-default-theme label.fk-radio:after, .fk-default-theme label.fk-check:after {
+  content: ' ';
+  width: 12px;
+  height: 12px;
+  left: 4px;
+  top: 2px;
+  border-radius: 3px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.fk-default-theme label.fk-radio:before, .fk-default-theme label.fk-radio:after {
+  border-radius: 50%;
+}
+
+.fk-default-theme label.checked.fk-radio:after, .fk-default-theme label.checked.fk-check:after {
+  background: #2f97e9;
+}
+
+.fk-default-theme .fk-select {
+  padding: 10px;
+  border: 1px solid #d8d8d8;
+  background: #fff;
+  border-radius: 3px;
+  line-height: 1.15;
+}
+
+.fk-default-theme .fk-select:after {
+  content: '\00bb';
+  display: block;
+  float: right;
+  padding: 10px 15px;
+  margin: -10px -15px;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.fk-default-theme .fk-select .fk-select-label {
+  color: #666;
+}
+
+.fk-default-theme .fk-select.fk-select-focus {
+  border-color: #000;
+}
+
+.fk-default-theme .fk-select.fk-select-focus .fl-select-label {
+  color: #000;
+}
+
+.fk-default-theme .fk-select.disabled {
+  opacity: 0.6;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+}
+
+.fk-default-theme .has-fk-select {
+  width: 100%;
+  border: 0;
+}
+
+.fk-default-theme .fk-file-input {
+  padding: 10px;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  line-height: 1.15;
+}
+
+.fk-default-theme .fk-file-input:after {
+  right: 3px;
+  top: 3px;
+  padding: 8px 10px;
+  text-align: center;
+  color: #fff;
+  background-color: #2f97e9;
+  border-radius: 3px;
+  line-height: 1;
+}
+
+.fk-default-theme .fk-file-input.disabled {
+  opacity: 0.6;
+}
+
+// Switches theme
+
+.fk-switches label.fk-radio:before, .fk-switches label.fk-check:before {
+  content: ' ';
+  width: 48px;
+  height: 20px;
+  background: #CDCDCD;
+  border: 1px solid #b4b4b4;
+}
+
+.fk-switches label.fk-radio:after, .fk-switches label.fk-check:after {
+  content: ' ';
+  width: 20px;
+  height: 20px;
+  top: -2px;
+  background: #FFF;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.fk-switches label.fk-radio:before {
+  width: 32px;
+  border-radius: 20px;
+}
+
+.fk-switches label.fk-radio:after {
+  border-radius: 20px;
+  left: 12px;
+}
+
+.fk-switches label.fk-check:before {
+  content: 'OFF';
+  padding-right: 18px;
+  color: #FFF;
+  font-size: 11px;
+  text-align: center;
+  line-height: 20px;
+}
+
+.fk-switches label.fk-check:after {
+  left: 28px;
+  background: #FFF;
+}
+
+.fk-switches label.checked.fk-radio:before {
+  background: #2f97e9;
+  border-color: #2f97e9;
+}
+
+.fk-switches label.checked.fk-radio:after {
+  left: 0;
+  border-color: #2f97e9;
+  background: #FFF;
+}
+
+.fk-switches label.checked.fk-check:before {
+  content: 'ON';
+  background: #2f97e9;
+  border-color: #2f97e9;
+  padding-right: 0;
+  padding-left: 18px;
+}
+
+.fk-switches label.checked.fk-check:after {
+  left: 0;
+  border-color: #2f97e9;
+  background: #FFF;
 }
