--- a/src/formikation.scss
+++ b/src/formikation.scss
@@ -1,6 +1,11 @@
 .formikation {
   label {
     display: block;
+  *:before,
+  *:after {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
   }
 
   //
