--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script src="{{ "/js/jquery.formikation.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/js/formikation.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/js/burgermenu.min.js" | prepend: site.baseurl }}"></script>
   <script defer src="{{ "/js/ready.js" | prepend: site.baseurl }}"></script>
 </head>
